# logos

./: Cargo.toml
.github/workflows/: rustlib.yml
examples/: brainfuck.rs  calculator.rs  json.rs  json_borrowed.rs
fuzz/: Cargo.toml
logos-cli/: Cargo.toml
logos-cli/src/: main.rs
logos-cli/tests/: tests.rs
logos-codegen/: Cargo.toml
logos-codegen/src/: error.rs  leaf.rs  lib.rs  pattern.rs  util.rs
logos-codegen/src/generator/: fork.rs
logos-codegen/src/graph/: dfa_util.rs  mod.rs
logos-codegen/src/parser/: definition.rs  error_type.rs  mod.rs
src/: lexer.rs  lib.rs  source.rs
tests/: Cargo.toml
tests/benches/: bench.rs
tests/src/: lib.rs
tests/target-cfg/: Cargo.toml
tests/tests/: simple.rs
